# controlpad

./: .gitignore  README.md  manufacturing.md
.github/ISSUE_TEMPLATE/: bug_report.md
electronics/: display ST7735 notes.md
electronics/controlpad/: controlpad.kicad_prl  controlpad.kicad_pro  controlpad.kicad_sch
hardware/: controlpad-USB-C holder.stl  controlpad-battery holder.stl  controlpad-display bracket.stl  controlpad.FCStd
scaboard/: scaboardlib.scad
software/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
software/main/: CMakeLists.txt  cJSON.c  communication.c  communication.h  configuration.c  configuration.h  display.c  display.h  fonts.c  fonts.h  fsm.c  fsm.configuration.c  fsm.configuration.h  fsm.h  fsm.menu.c  fsm.menu.h  fsm.profile.c  fsm.profile.h  fsm.system.c  fsm.system.h  i2c.c  i2c.h  joystick.c  joystick.h  keyboard.c  keyboard.h  main.adc_continuous.c  main.adc_oneshot.c  main.c  main.h  mainloop.c  mainloop.h  sample.c  serial.c  serial.h  tips.c  wifi.c  wifi.h
software/server/: configuration.sample.yaml  configure.py  requirements.txt  run.test.configure.sh  run.test.netcat.sh  run.test.netcat.udp.sh  socket.tester.py
